# ergopilot

./: .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/control-plane/: package.json
apps/control-plane/src/: app.test.ts  app.ts  evaluate-planner.ts  index.ts  planner-attempt-store.test.ts  planner-attempt-store.ts  planner-evaluation-store.test.ts  planner-evaluation-store.ts  planner-evaluation.test.ts  planner-evaluation.ts  station-client.integration.test.ts  station-client.ts  task-planner.test.ts  task-planner.ts
apps/mcp-server/: package.json
apps/mcp-server/src/: control-plane-client.test.ts  control-plane-client.ts  index.ts  server.test.ts  server.ts  test-fixtures.ts
apps/station/: package.json
apps/station-cli/: Cargo.toml
apps/station-cli/src/: lib.rs  main.rs
apps/station-cli/tests/: approval_demo.rs  demo.rs  rpc.rs
apps/station/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/station/src-tauri/capabilities/: main.json
apps/station/src-tauri/src/: host.rs  lib.rs  main.rs
apps/web/: .cta.json  .gitignore  README.md  biome.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: routeTree.gen.ts  styles.css
apps/web/src/components/ai-elements/: conversation.tsx  message.tsx  task.tsx
apps/web/src/components/ui/: alert-dialog.tsx  button-group.tsx  input-group.tsx
apps/web/src/features/: device-action.ts
apps/web/src/features/evaluation-dashboard/: evaluation-dashboard.test.tsx  evaluation-dashboard.tsx
apps/web/src/features/fault-lab/: fault-lab.test.tsx  fault-lab.tsx  fault-scenarios.test.ts  fault-scenarios.ts
apps/web/src/features/operator-console/: agent-planner-card.test.tsx  agent-planner-card.tsx  operator-console.test.tsx  operator-console.tsx  planner-attempts-card.test.tsx  planner-attempts-card.tsx  run-overview.test.tsx  run-overview.tsx  run-timeline.test.ts  run-timeline.tsx  station-card.tsx  status-badge.tsx  task-builder.test.ts  task-builder.ts  task-composer.test.tsx  task-composer.tsx
apps/web/src/features/workstation-motion/: motion-progress.tsx
apps/web/src/features/workstation-profile/: workstation-profile.test.ts  workstation-profile.ts
apps/web/src/features/workstation-twin/: backrest-motion.test.ts  backrest-motion.ts  workstation-scene-model.test.ts  workstation-scene-model.ts  workstation-scene.tsx  workstation-twin-card.test.tsx  workstation-twin-card.tsx
apps/web/src/lib/: control-plane.test.ts  control-plane.ts
apps/web/src/routes/: __root.tsx  evals.tsx  index.tsx  lab.tsx
crates/device-sim/: Cargo.toml
crates/device-sim/src/: lib.rs
crates/device-sim/tests/: actuator_jam.rs  compare_and_set.rs  persistence.rs  recovery.rs
crates/ergopilot-protocol/: Cargo.toml
crates/ergopilot-protocol/src/: lib.rs
crates/ergopilot-protocol/tests/: json_contract.rs
crates/policy-core/: Cargo.toml
crates/policy-core/src/: lib.rs
crates/policy-core/tests/: decisions.rs  grants.rs
crates/station-core/: Cargo.toml
crates/station-core/src/: lib.rs
crates/station-core/tests/: crash_recovery.rs  normal_execution.rs
crates/task-runtime/: Cargo.toml
crates/task-runtime/src/: lib.rs
crates/task-runtime/tests/: approval_flow.rs  cancellation.rs  failure.rs  json_contract.rs  profile_memory.rs  recovery.rs
docs/: PLANNER_EVALUATION.md  PROJECT_BLUEPRINT.md
docs/evaluations/: deepseek-full-2026-07-13.json
learning/: MISSION.md  NOTES.md  RESOURCES.md
learning/assets/: command-sim.js  course.css  quiz.js
learning/learning-records/: 0001-prior-frontend-engineering-foundation.md
learning/lessons/: 0001-from-frontend-to-agent-runtime.html  0002-one-device-command-lifecycle.html
learning/reference/: agent-runtime-stack-map.html  reliable-device-command-checklist.html
