[workspace]
members = [
  "apps/station-cli",
  "crates/device-sim",
  "crates/ergopilot-protocol",
  "crates/station-core",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.83"
version = "0.1.0"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "=3.14.0"
thiserror = "2"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
