[workspace]
members = [
  "apps/station-cli",
  "crates/device-sim",
  "crates/ergopilot-protocol",
  "crates/policy-core",
  "crates/station-core",
  "crates/task-runtime",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.83"
version = "0.1.0"

[workspace.dependencies]
hmac = "0.12"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "=3.14.0"
thiserror = "2"

[profile.dev]
debug = 1

[profile.release]
lto = "thin"
