[package]
name = "station-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
device-sim = { path = "../../crates/device-sim" }
ergopilot-protocol = { path = "../../crates/ergopilot-protocol" }
policy-core = { path = "../../crates/policy-core" }
serde.workspace = true
serde_json.workspace = true
station-core = { path = "../../crates/station-core" }
task-runtime = { path = "../../crates/task-runtime" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
