[package]
name = "task-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ergopilot-protocol = { path = "../ergopilot-protocol" }
policy-core = { path = "../policy-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
station-core = { path = "../station-core" }
thiserror.workspace = true

[dev-dependencies]
device-sim = { path = "../device-sim" }
tempfile.workspace = true
