[package]
name = "ergopilot-station"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"

[lib]
name = "ergopilot_station_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
getrandom = "0.3"
policy-core = { path = "../../../crates/policy-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
station-cli = { path = "../../station-cli" }
tauri = { version = "2.11.5", features = [] }
thiserror = "2"

[dev-dependencies]
tempfile = "=3.14.0"

[workspace]
